@@ -1,0 +1,53 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_Audio_Menu"></a><span style="text-decoration: underline;">The Audio Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="menus_audio.png" src="images/Menus_Audio.png" hspace="20">
+
+<br>
+<br>
+The Audio Menu allows attaching a new audio to the movie or sequence being played.  It is useful to test, for example, lip syncing in an animated movie.
+<br>
+<br>
+The Edit Audio Offset opens a requester to allow offsetting the audio forwards or backwards by a number of frames.
+<br>
+<img alt="audio_offset.png" src="images/Audio_Offset.png" hspace="20">
+<br>
+<br>
+The Detach Audio File, removes the current audio and restates the original audio of a movie if it came with audio..
+<br>
+<br>
+
+
+
+</body>
+</html>
